--- a/src/components/NavLinks/NavLinks.module.css
+++ b/src/components/NavLinks/NavLinks.module.css
@@ -20,3 +20,10 @@
     height: 50px;
     object-fit: cover;
   }
+
+  .activeNavLink{
+    color: blue;
+    border: 1px solid blue;
+    border-radius: 15px;
+    background-color: lightskyblue;
+  }
