--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -37,3 +37,9 @@
   border: none;
   cursor: pointer;
 }
+.validInput {
+  background-color: lightgreen;
+}
+.invalidInput {
+  background-color: lightcoral;
+}
